Fixed New Hampshire spacing issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,9 +121,9 @@ h1 {
 }
 
 .ml-row {
-    margin-left: 10%;
+    margin-left: 7%;
 }
 
 .mr-row {
-    margin-right: 10%
+    margin-right: 7%
 }
